fixing node_info

--- a/site/site/templates/node_info.erb
+++ b/site/site/templates/node_info.erb
@@ -1,6 +1,7 @@
 ---
 <% if @node_info -%>
+node_info:
 <% @node_info.keys.sort.each do |key| -%>
-<%=key -%>: <%=@node_info[key] -%>
+  <%=key -%>: <%=@node_info[key] %>
 <% end -%>
 <% end -%>
