fixed account scaling

--- a/site/site/templates/node_info.erb
+++ b/site/site/templates/node_info.erb
@@ -4,4 +4,7 @@ node_info:
 <% @node_info.keys.sort.each do |key| -%>
   <%=key -%>: <%=@node_info[key] %>
 <% end -%>
+<% end -%>
+<% if @accounting_scale_factor -%>
+  accounting_scale_factor: <%=@accounting_scale_factor -%>
 <% end %>
