--- a/site/profile/templates/gmond.conf.erb
+++ b/site/profile/templates/gmond.conf.erb
@@ -47,29 +47,37 @@ host {
                        # interface and the DNS names associated with
                        # those IPs will be used to create the RRDs.
    */
-<% @servers.each do |server| -%>
+<% if @ganglia_use_multicast -%>
+# multicast
 udp_send_channel {
-  host = <%= server -%> 
-  port = <%= @port -%> 
+  mcast_join = 239.2.11.71
+  port = <%= @ganglia_port %>
   ttl = 1
 }
-<% end %>
-
-/* You can specify as many udp_recv_channels as you like as well. */
 udp_recv_channel {
- # mcast_join = 239.2.11.71
-  port = <%= @port -%> 
- # bind = 239.2.11.71
-#  retry_bind = true
-  # Size of the UDP buffer. If you are handling lots of metrics you really
-  # should bump it up to e.g. 10MB or even higher.
-  # buffer = 10485760
+  mcast_join = 239.2.11.71
+  port = <%= @ganglia_port %>
+  bind = 239.2.11.71
 }
+<% else -%>
+# unicast
+<% @ganglia_servers.each do |server| -%>
+udp_send_channel {
+  host = <%= server %>
+  port = <%= @ganglia_port %>
+  ttl = 1
+}
+udp_recv_channel {
+  port = <%= @ganglia_port %>
+}
+<% end %>
+<% end -%>
+
 
 /* You can specify as many tcp_accept_channels as you like to share
    an xml description of the state of the cluster */
 tcp_accept_channel {
-  port = <%= @port -%> 
+  port = <%= @ganglia_port %>
   # If you want to gzip XML output
   gzip_output = no
 }
