--- a/site/profile/templates/gmond.conf.erb
+++ b/site/profile/templates/gmond.conf.erb
@@ -27,7 +27,7 @@ globals {
  * tag that will wrap all hosts collected by this instance.
  */
 cluster {
-  name = "<%= @cluster_name -%>"
+  name = "<%= @ganglia_cluster_name -%>"
   owner = "unspecified"
   latlong = "unspecified"
   url = "unspecified"
