--- a/site/profile/templates/etc/rsyslog.d/99_it_services.conf.erb
+++ b/site/profile/templates/etc/rsyslog.d/99_it_services.conf.erb
@@ -15,9 +15,9 @@ $ActionFileDefaultTemplate RSYSLOG_FileFormat
 <% end %>
 
 # The authpriv file has restricted access.
-if ( $syslogfacility-text == "auth" or $syslogfacility-text == "authpriv" ) then {
+<%# if ( $syslogfacility-text == "auth" or $syslogfacility-text == "authpriv" ) then {
     action(type="omfile" file="/var/log/secure")
-}
+} %>
 
 # Log anything (except mail) of level info or higher.
 # Don't log private authentication messages!
