--- a/site/profile/templates/etc/rsyslog.conf.erb
+++ b/site/profile/templates/etc/rsyslog.conf.erb
@@ -48,7 +48,7 @@ $IncludeConfig /etc/rsyslog.d/*.conf
 *.info;mail.none;authpriv.none;cron.none                /var/log/messages
 
 # The authpriv file has restricted access.
-auth,authpriv.*                               /var/log/secure
+auth,authpriv.*                                         /var/log/secure
 
 # Log all the mail messages in one place.
 mail.*                                                  -/var/log/maillog
@@ -58,7 +58,7 @@ mail.*                                                  -/var/log/maillog
 cron.*                                                  /var/log/cron
 
 # Everybody gets emergency messages
-*.emerg                                                 *
+*.emerg                                                 :omusrmsg:*
 
 # Save news errors of level crit and higher in a special file.
 #uucp,news.crit                                          /var/log/spooler
@@ -95,7 +95,6 @@ $template sysklogd,"<%%PRI%>%TIMESTAMP% %syslogtag%%msg%"
 <% end %>
 
 # Stuff for central logging
-#$WorkDirectory /var/lib/rsyslog    # where to place spool files
 $WorkDirectory /var/lib/rsyslog    # where to place spool files
 $ActionQueueFileName queue      # unique name prefix for spool files
 #$ActionQueueMaxDiskSpace 1g     # spool space limit (use as much as possible)
