--- a/site/site/templates/dice_config.yaml.erb
+++ b/site/site/templates/dice_config.yaml.erb
@@ -6,6 +6,30 @@
 <% end -%>
 <% end -%>
 
+<% if @dice_computing_grid -%>
+computing_grid:
+<% info = @dice_computing_grid.to_yaml.split("\n") -%>
+<% info.drop(1).each do |line| -%>
+  <%= line %>
+<% end -%>
+<% end -%>
+
+<% if @dice_storage -%>
+storage:
+<% info = @dice_storage.to_yaml.split("\n") -%>
+<% info.drop(1).each do |line| -%>
+  <%= line %>
+<% end -%>
+<% end -%>
+
+<% if @dice_glossary -%>
+glossary:
+<% info = @dice_glossary.to_yaml.split("\n") -%>
+<% info.drop(1).each do |line| -%>
+  <%= line %>
+<% end -%>
+<% end -%>
+
 <% if @site_info -%>
 site_info:
 <% info = @site_info.to_yaml.split("\n") -%>
