--- a/site/profile/templates/etc/rsyslog.conf.erb
+++ b/site/profile/templates/etc/rsyslog.conf.erb
@@ -9,13 +9,15 @@ $ModLoad imuxsock # provides support for local system logging (e.g. via logger c
 $ModLoad imklog   # provides kernel logging support (previously done by rklogd)
 #$ModLoad immark  # provides --MARK-- message capability
 
+<% if @is_central_log -%>
 # Provides UDP syslog reception
-#$ModLoad imudp
-#$UDPServerRun 514
+$ModLoad imudp
+$UDPServerRun 514
 
 # Provides TCP syslog reception
-#$ModLoad imtcp
-#$InputTCPServerRun 514
+$ModLoad imtcp
+$InputTCPServerRun 514
+<% end %>
 
 
 #### GLOBAL DIRECTIVES ####
@@ -85,12 +87,14 @@ local7.*                                                /var/log/boot.log
 #*.* @@remote-host:514
 # ### end of the forwarding rule ###
 
+<% unless @is_central_log -%>
 # DICE central logging
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 $template sysklogd,"<%%PRI%>%TIMESTAMP% %syslogtag%%msg%"
 <% if @central_log -%>
 <% @central_log.each do |c| -%>
 *.* @<%= c %>
+<% end %>
 <% end %>
 <% end %>
 
